--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ssokssok_survey",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+},
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
