--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "ssokssok_survey",
   "version": "0.0.1",
   "private": true,
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
-},
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "eslint": "^9.35.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.4.0",
     "typescript": "^5.4.0",
+    "typescript-eslint": "^8.43.0",
     "vite": "^5.0.0"
   }
 }
